k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
